tests/tooling/fixtures/native/execution/positive/message_send_nonzero_short_circuit_receiver_fast_path.objc3
module MessageSendNonzeroShortCircuitReceiverFastPath;

fn side() -> i32 {
  return 0;
}

fn main() -> i32 {
  return [(1 || side()) ping];
}
