tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_param_type_trailing_extern.objc3
module MisplacedQualifierAfterParamTypeTrailingExtern;

fn add(lhs: i32, rhs: i32 extern) -> i32;

fn main() -> i32 {
  return 0;
}
